<resources>
    <string name="app_name">intelloClean</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="not_registered">Not registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="register">Register</string>
    <string name="welcome_user">Welcome User</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="capture">capture</string>
    <string name="email">e-mail</string>
    <string name="phone">phone</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
</resources>
