<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="2dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:hint="@string/username"
        android:textColorHint="#1A010D" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="2dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:hint="@string/email"
        android:textColorHint="#1A010D" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="2dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/ic_phone_android_black_24dp"
        android:hint="@string/phone"
        android:textColorHint="#1A010D" />

    <EditText
        android:id="@+id/edittext_gender"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="2dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/gender"
        android:hint="@string/gender"
        android:textColorHint="#1A010D" />

    <EditText
        android:id="@+id/edittext_age"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="2dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/ic_access_time_black_24dp"
        android:hint="@string/age"
        android:textColorHint="#1A010D" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:textColorHint="#1A010D" />

    <EditText
        android:id="@+id/edittext_cnfpassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#d2ffd2"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/confirm_password"
        android:textColorHint="#1A010D" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#1080ff"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#FDFCFC"
            android:textColorHint="#F1EDED" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="#1080ff"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
</ScrollView>